--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Floppa - Log in!{% endblock %}
+{% block title %} Floppa - Log in! {% endblock %}
 
 {% block body %}
 <form method="post">
@@ -42,7 +42,7 @@
         Sign in
     </button>
     <div style="margin-top: 20px;">
-        Can you go to welcome page <a href="{{ path('app_welcomepage') }}"> Home Page </a>
+        You can go to welcome page <a href="{{ path('app_welcomepage') }}"> Home Page </a>
     </div>
     {% endif %}
 </form>
