--- a/templates/mainPage/welcomepage.html.twig
+++ b/templates/mainPage/welcomepage.html.twig
@@ -8,7 +8,7 @@
     {% if app.user %}
 
         <div style="height: 100px; font-size: 20px;">
-            <p> Em? Really?! You are logged in {{ app.user.username }}  <a href="{{ path('app_login') }}"><button> Sign In Now! </button></a>
+            <p> Em? Really?! You are logged in {{ app.user.username }}  <a href="{{ path('/logout') }}"><button> Sign In Now! </button></a>
         </div>
 
     {% else %}
