--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -33,7 +33,7 @@
     {{ form_end(registrationForm) }}
 
         <div style="margin-top: 40px;">
-            Also can go to welcome page <a href="{{ path('app_welcomepage') }}"> Home Page </a>
+            Also can go to welcome page <a href="{{ path('index') }}"> Home Page </a>
         </div>
     {% endif %}
 {% endblock %}
